#376 Fix Archived Thoughts header color in dark mode

--- a/ui/src/react/pages/archives/thought-archives/ArchivedBoardsList.scss
+++ b/ui/src/react/pages/archives/thought-archives/ArchivedBoardsList.scss
@@ -20,6 +20,11 @@
 
 .archived-boards-list {
   text-align: center;
+
+  .thoughts-archive-title {
+    font-weight: normal;
+  }
+
   .list-header {
     display: flex;
     flex-direction: row;
@@ -69,6 +74,10 @@
 
 @include dark-theme {
   .archived-boards-list {
+    .thoughts-archive-title {
+      color: $gray;
+    }
+
     .list-header {
       background: $light-gray;
 
